--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ clap = { version = "4", features = ["derive"] }
 log = "0.4"
 env_logger = "0.11"
 rayon = "1"
+lazy_static = "1.4"
 # Audio I/O + wav reading
 hound = { version = "3", optional = true }
 cpal = { version = "0.15", optional = true }
